--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              
+              <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
               <a class="nav-link" href="{% url 'about' %}">About</a>
               <a class="nav-link" href="/admin">Login</a>
             </div>
