Made nav-bar into base.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,11 @@
 {% block title %}About{% endblock title %}
 
 {% block content %}
-    <h1>This is all about the project management app and it's authors.</h1>
-    <img src="{% static 'img/testing_meme3.jpg' %}">
+
+    <div class="col-md-9 content">
+        <h1>This is all about the project management app and it's authors.</h1>
+        <img src="{% static 'img/testing_meme3.jpg' %}">
+    </div>
+
+
 {% endblock content %}
