--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,104 +1,13 @@
-
+{% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
 
-    <title>
+ 
+{% block title %} Overview &middot; {% endblock title %}
       
-        Overview &middot; 
-      
-    </title>
-
-    <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
-    
-    <!-- CUSTOM STYLES FOR THIS TEMPLATE -->
-    <link href="{% static 'assets/css/toolkit-inverse.css' %}" rel="stylesheet">
-    
-    <link href="{% static 'assets/css/application.css' %}" rel="stylesheet">
-
-    <style>
-      /* note: this is a hack for ios iframe for bootstrap themes shopify page */
-      /* this chunk of css is not part of the toolkit :) */
-      body {
-        width: 1px;
-        min-width: 100%;
-        *width: 100%;
-      }
-    </style>
-  </head>
 
 
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3 sidebar">
-        <nav class="sidebar-nav">
-          <div class="sidebar-header">
-            <button class="nav-toggler nav-toggler-md sidebar-toggler" type="button" data-toggle="collapse" data-target="#nav-toggleable-md">
-              <span class="sr-only">Toggle nav</span>
-            </button>
-            <a class="sidebar-brand img-responsive" href="{% url 'home' %}">
-              <span class="icon icon-leaf sidebar-brand-icon"></span>
-            </a>
-            <a class="btn btn-sm btn-primary" href="{% url 'dashboard' %}">Your Dashboard</a>
-            <a class="btn btn-sm btn-primary" href="{% url 'about' %}">About</a>
-            <a class="btn btn-sm btn-primary" href="/admin">Login</a>
-          </div>
-
-          <div class="collapse nav-toggleable-md" id="nav-toggleable-md">
-            <form class="sidebar-form">
-              <input class="form-control" type="text" placeholder="Search...">
-              <button type="submit" class="btn-link">
-                <span class="icon icon-magnifying-glass"></span>
-              </button>
-            </form>
-            <ul class="nav nav-pills nav-stacked flex-column">
-              <li class="nav-header">Dashboards</li>
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'home' %}">Overview</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="{% url 'ticket-history' %}">Order history</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link "href="fluid/index.html">Fluid layout</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="icon-nav/index.html">Icon nav</a>
-              </li>
-
-              <li class="nav-header">More</li>
-              <li class="nav-item">
-                <a class="nav-link "href="docs/index.html">
-                  Toolkit docs
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="http://getbootstrap.com" target="blank">
-                  Bootstrap docs
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="index-light/index.html">Light UI</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#docsModal" data-toggle="modal">
-                  Example modal
-                </a>
-              </li>
-            </ul>
-            <hr class="visible-xs mt-3">
-          </div>
-        </nav>
-      </div>
+{% block content %}
       <div class="col-md-9 content">
         <div class="dashhead">
   <div class="dashhead-titles">
@@ -461,5 +370,4 @@
       // execute/clear BS loaders for docs
       $(function(){while(window.BS&&window.BS.loader&&window.BS.loader.length){(window.BS.loader.pop())()}})
     </script>
-  </body>
-</html>
+  {% endblock content %}
