login page form, misc navigations

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,10 @@
         <p>Welcome to QlickBooks, our application is directed towards your stay-home mom to your fortune 500 CEO. What our app does is break down every task that needs to be completed in order to keep all your team members or family members on track. Our services are completely free and we highly encourage you to share our amazing app with your friends or boss that needs a little help organizing tasks!</p> 
     </div>
     <div class="signin">
-      <h1>Sign In</h1>
-      <input type="text" placeholder="Enter Your Email">
-      <input type="password">
-      <a href="/admin" class="btn btn-primary">Sign In</a>
-      <a href="{% url 'dashboard' %}">To the Dashboard</a>
+      <h1>Welcome!</h1>
+      <a href="/accounts/login" class="btn btn-primary">LogIn</a>
+      <p>or</p>
+      <a href="#" class="btn btn-warning">Signup</a>
     </div>
   
 {% endblock content %}
