Icon nav bar, and basic project model

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
               <a class="nav-link "href="fluid/index.html">Fluid layout</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="icon-nav/index.html">Icon nav</a>
+              <a class="nav-link " href="{% url 'project_list' %}">Icon nav</a>
             </li>
 
             <li class="nav-header">More</li>
