--- a/templates/icon-nav.html
+++ b/templates/icon-nav.html
@@ -40,19 +40,19 @@
 <div class="with-iconav">
 
   <nav class="iconav">
-    <a class="iconav-brand" href="../index.html">
+    <a class="iconav-brand" href="{% url 'home' %}">
       <span class="icon icon-leaf iconav-brand-icon"></span>
     </a>
     <div class="iconav-slider">
       <ul class="nav nav-pills iconav-nav flex-md-column">
         <li class="nav-item">
-          <a class="nav-link" href="../index.html" title="Overview" data-toggle="tooltip" data-placement="right" data-container="body">
+          <a class="nav-link" href="{% url 'project_list' %}" title="Overview" data-toggle="tooltip" data-placement="right" data-container="body">
             <span class="icon icon-home"></span>
             <small class="iconav-nav-label hidden-md-up">Overview</small>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../order-history/index.html" title="Order history" data-toggle="tooltip" data-placement="right" data-container="body">
+          <a class="nav-link" href="{% url 'ticket-history' %}" title="Order history" data-toggle="tooltip" data-placement="right" data-container="body">
             <span class="icon icon-text-document"></span>
             <small class="iconav-nav-label hidden-md-up">History</small>
           </a>
