--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'icon-nav.html' %}
 {% load static %}
 
 
@@ -12,7 +12,7 @@
         <div class="dashhead">
   <div class="dashhead-titles">
     <h6 class="dashhead-subtitle">Dashboards</h6>
-    <h2 class="dashhead-title">Overview</h2>
+    <h2 class="dashhead-title">Welcome to your Dash</h2>
   </div>
 
   <div class="btn-toolbar dashhead-toolbar">
