--- a/templates/projects/list.html
+++ b/templates/projects/list.html
@@ -7,7 +7,7 @@
     <div class="dashhead">
       <div class="dashhead-titles">
         <h6 class="dashhead-subtitle">Dashboards</h6>
-        <h3 class="dashhead-title">Overview</h3>
+        <h3 class="dashhead-title">Projects List</h3>
       </div>
 
       <div class="dashhead-toolbar">
