--- a/templates/ticket-history.html
+++ b/templates/ticket-history.html
@@ -1,6 +1,8 @@
 {% extends 'icon-nav.html' %}
 {% load static %}
 
+{% block title %} Ticket History {% endblock title %}
+
 {% block content %}
 
 <!DOCTYPE html>
