--- a/templates/icon-nav.html
+++ b/templates/icon-nav.html
@@ -83,7 +83,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}" title="Logout" data-toggle="tooltip" data-placement="right" data-container="body">
-            <span class="icon icon-flash"></span>
+            <span class="icon icon-arrow-left"></span>
             <small class="iconav-nav-label hidden-md-up">Logout</small>
           </a>
         </li>
