URLs and Views for Accounts

--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -10,6 +10,6 @@
         <div class="btn-toolbar-item input-with-icon">
         </div>
     </div>
-    <h1>You are now logged out.</h1>
+    <h1>You are now<br>logged out.</h1>
 
 {% endblock content %}
