New Projects html

--- a/templates/icon-nav.html
+++ b/templates/icon-nav.html
@@ -52,26 +52,26 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'ticket-history' %}" title="Ticket history" data-toggle="tooltip" data-placement="right" data-container="body">
-            <span class="icon icon-text-document"></span>
-            <small class="iconav-nav-label hidden-md-up">History</small>
-          </a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="{% url 'project_list' %}" title="Project List" data-toggle="tooltip" data-placement="right" data-container="body">
-            <span class="icon icon-globe"></span>
+            <span class="icon icon-list"></span>
             <small class="iconav-nav-label hidden-md-up">Project List</small>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="../icon-nav/index.html" title="Icon-nav" data-toggle="tooltip" data-placement="right" data-container="body">
-            <span class="icon icon-area-graph"></span>
-            <small class="iconav-nav-label hidden-md-up">Icon nav</small>
+          <a class="nav-link" href="{% url 'ticket-history' %}" title="Ticket history" data-toggle="tooltip" data-placement="right" data-container="body">
+            <span class="icon icon-globe"></span>
+            <small class="iconav-nav-label hidden-md-up">History</small>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'project_new' %}" title="New Project" data-toggle="tooltip" data-placement="right" data-container="body">
+            <span class="icon icon-upload"></span>
+            <small class="iconav-nav-label hidden-md-up">New Project</small>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}" title="About" data-toggle="tooltip" data-placement="right" data-container="body">
-            <span class="icon icon-list"></span>
+            <span class="icon icon-text-document"></span>
             <small class="iconav-nav-label hidden-md-up">About</small>
           </a>
         </li>
