--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<hr class="mt-3">
+<hr class="mt-3">Recent Projects</h3>
 
 <div class="row text-center mt-5">
   <div class="col-md-4 mb-4 mb-md-3">
