--- a/templates/projects/detail.html
+++ b/templates/projects/detail.html
@@ -5,5 +5,6 @@
 {% block content %}
     <h1>{{project.title}}</h1>
     <p>{{project.description}}</p>
+    <p>{{ ticket.title }}</p>
 
 {% endblock content %}
