--- a/templates/projects/detail.html
+++ b/templates/projects/detail.html
@@ -3,8 +3,12 @@
 {% block title %}{{project.title}}{% endblock title %}
 
 {% block content %}
-    <h1>{{project.title}}</h1>
-    <p>{{project.description}}</p>
-    <p>{{ ticket.title }}</p>
+    <h1>{{ticket.project}}</h1>
+    <p>{{ticket.project.description}}</p>
+    {% for ticket in ticket_list %}
+    <p>{{ticket.title}}</p>
+    <p>{{ticket.author}}</p>
+    {% endfor %}
+
 
 {% endblock content %}
