Creating relation Project and Ticket

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       <h1>Welcome!</h1>
       <a href="/accounts/login" class="btn btn-primary">LogIn</a>
       <p>or</p>
-      <a href="#" class="btn btn-warning">Signup</a>
+      <a href="/accounts/signup" class="btn btn-warning">Signup</a>
     </div>
   
 {% endblock content %}
