--- a/templates/tickets/ticket-list.html
+++ b/templates/tickets/ticket-list.html
@@ -8,5 +8,6 @@
         <h3>{{ ticket.title }}</h3>
         <h4>{{ ticket.status }}</h4>
         <p>{{ ticket.commentary }}</p>
+        <p>{{ticket.project}}</p>
     {% endfor %}
 {% endblock content %}
