--- a/templates/projects/list.html
+++ b/templates/projects/list.html
@@ -56,7 +56,7 @@
               </canvas>
             </div>
             <strong class="text-muted"><a href="{% url 'project_detail' project.id %}">{{ project.title }}</strong>
-            <h4>New vs Returning</h4>
+            <h4>{{project.description}}</h4>
           </div>
           {% endfor %}
           
