--- a/templates/ticket-history.html
+++ b/templates/ticket-history.html
@@ -139,173 +139,25 @@
     <thead>
       <tr>
         <th><input type="checkbox" class="select-all" id="selectAll"></th>
-        <th>Ticket</th>
-        <th>Customer name</th>
-        <th>Description</th>
-        <th>Date</th>
-        <th>Total</th>
+        <th>Ticket #</th>
+        <th>Project</th>
+        <th>Ticket Title</th>
+        <th>Status</th>
+        <th>Difficulty</th>
       </tr>
     </thead>
     <tbody>
+      {% for ticket in ticket_list %}
       <tr>
         <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10001</a></td>
-        <td>First Last</td>
-        <td>Admin theme, marketing theme</td>
-        <td>01/01/2015</td>
-        <td>$200.00</td>
+        <td><a href="{% url 'ticket_detail' ticket.id %}">{{ ticket.id }}</a></td>
+        <td>{{ ticket.title }}</td>
+        <td>{{ ticket.project}}</td>
+        <td>{{ ticket.status }}</td>
+        <td>{{ ticket.difficulty }}</td>
       </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10002</a></td>
-        <td>Firstname Last</td>
-        <td>Admin theme</td>
-        <td>01/01/2015</td>
-        <td>$100.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10003</a></td>
-        <td>Name Another</td>
-        <td>Personal blog theme</td>
-        <td>01/01/2015</td>
-        <td>$100.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10004</a></td>
-        <td>One More</td>
-        <td>Marketing theme, personal blog theme, admin theme</td>
-        <td>01/01/2015</td>
-        <td>$300.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10005</a></td>
-        <td>Name Right Here</td>
-        <td>Personal blog theme, admin theme</td>
-        <td>01/02/2015</td>
-        <td>$200.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10006</a></td>
-        <td>First Last</td>
-        <td>Admin theme, marketing theme</td>
-        <td>01/01/2015</td>
-        <td>$200.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10007</a></td>
-        <td>Firstname Last</td>
-        <td>Admin theme</td>
-        <td>01/01/2015</td>
-        <td>$100.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10008</a></td>
-        <td>Name Another</td>
-        <td>Personal blog theme</td>
-        <td>01/01/2015</td>
-        <td>$100.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10009</a></td>
-        <td>One More</td>
-        <td>Marketing theme, personal blog theme, admin theme</td>
-        <td>01/01/2015</td>
-        <td>$300.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10010</a></td>
-        <td>Name Right Here</td>
-        <td>Personal blog theme, admin theme</td>
-        <td>01/02/2015</td>
-        <td>$200.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10011</a></td>
-        <td>First Last</td>
-        <td>Admin theme, marketing theme</td>
-        <td>01/01/2015</td>
-        <td>$200.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10012</a></td>
-        <td>Firstname Last</td>
-        <td>Admin theme</td>
-        <td>01/01/2015</td>
-        <td>$100.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10013</a></td>
-        <td>Name Another</td>
-        <td>Personal blog theme</td>
-        <td>01/01/2015</td>
-        <td>$100.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10014</a></td>
-        <td>One More</td>
-        <td>Marketing theme, personal blog theme, admin theme</td>
-        <td>01/01/2015</td>
-        <td>$300.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10015</a></td>
-        <td>Name Right Here</td>
-        <td>Personal blog theme, admin theme</td>
-        <td>01/02/2015</td>
-        <td>$200.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10016</a></td>
-        <td>First Last</td>
-        <td>Admin theme, marketing theme</td>
-        <td>01/01/2015</td>
-        <td>$200.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10017</a></td>
-        <td>Firstname Last</td>
-        <td>Admin theme</td>
-        <td>01/01/2015</td>
-        <td>$100.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10018</a></td>
-        <td>Name Another</td>
-        <td>Personal blog theme</td>
-        <td>01/01/2015</td>
-        <td>$100.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10019</a></td>
-        <td>One More</td>
-        <td>Marketing theme, personal blog theme, admin theme</td>
-        <td>01/01/2015</td>
-        <td>$300.00</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox" class="select-row"></td>
-        <td><a href="#">#10020</a></td>
-        <td>Name Right Here</td>
-        <td>Personal blog theme, admin theme</td>
-        <td>01/02/2015</td>
-        <td>$200.00</td>
+      {% endfor %}
+      
     </tbody>
   </table>
 </div>
@@ -321,10 +173,6 @@
       </li>
       <li class="page-item active"><a class="page-link" href="#">1</a></li>
       <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#">4</a></li>
-      <li class="page-item"><a class="page-link" href="#">5</a></li>
-      <li class="page-item">
         <a class="page-link" href="#" aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
           <span class="sr-only">Next</span>
