--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,9 +26,12 @@
 <hr class="mt-3">Recent Projects</h3>
 
 <div class="row text-center mt-5">
-  <div class="col-md-4 mb-4 mb-md-3">
-    <div class="w-3 mx-auto">
-      <canvas
+
+  {% for project in project_list %}
+  {% if forloop.counter <= 3 %}
+    <div class="col-md-4 mb-4 mb-md-3">
+      <div class="w-3 mx-auto">
+        <canvas
         class="ex-graph"
         width="200" height="200"
         data-chart="doughnut"
@@ -36,38 +39,13 @@
         data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
         data-labels="['Returning', 'New']">
       </canvas>
+      <strong class="text-muted">{{ project.description }}</strong>
+      <a href="{% url 'project_detail' project.id %}"><h4>{{ project.title }}</h4></a>
+      </div>
     </div>
-    <strong class="text-muted">Traffic</strong>
-    <h4>New vs Returning</h4>
-  </div>
-  <div class="col-md-4 mb-4 mb-md-3">
-    <div class="w-3 mx-auto">
-      <canvas
-        class="ex-graph"
-        width="200" height="200"
-        data-chart="doughnut"
-        data-dataset="[330,30]"
-        data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
-        data-labels="['Returning', 'New']">
-      </canvas>
-    </div>
-    <strong class="text-muted">Revenue</strong>
-    <h4>New vs Recurring</h4>
-  </div>
-  <div class="col-md-4 mb-4 mb-md-3">
-    <div class="w-3 mx-auto">
-      <canvas
-        class="ex-graph"
-        width="200" height="200"
-        data-chart="doughnut"
-        data-dataset="[100,260]"
-        data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
-        data-labels="['Referrals', 'Direct']">
-      </canvas>
-    </div>
-    <strong class="text-muted">Traffic</strong>
-    <h4>Direct vs Referrals</h4>
-  </div>
+  
+  {% endif %}
+  {% endfor %}  
 </div>
 
 <div class="hr-divider mt-5 mb-3">
