--- a/templates/projects/detail.html
+++ b/templates/projects/detail.html
@@ -5,6 +5,7 @@
 {% block content %}
     <h1>{{project.title}}</h1>
     <h2>{{project.description}}</h2>
+    <p>There are {} tickets that need to be completed</p>
     <ol>
         {% for ticket in ticket_list %}
         <a href="{% url 'ticket_new' %}">Add a Ticket</a>
