--- a/templates/projects/list.html
+++ b/templates/projects/list.html
@@ -57,6 +57,7 @@
             </div>
             <strong class="text-muted"><a href="{% url 'project_detail' project.id %}">{{ project.title }}</strong>
             <h4>{{project.description}}</h4>
+            <p>There are {} tickets that need to be completed</p>
           </div>
           {% endfor %}
           
