--- a/templates/tickets/detail.html
+++ b/templates/tickets/detail.html
@@ -14,4 +14,5 @@
     <h6>Posted by {{ ticket.author }}</h6>
     <a href="{% url 'ticket_edit' ticket.id %}">Edit Post</a> |
     <a href="{% url 'ticket_delete' ticket.id %}">Delete</a>
+    <a href="#">Update Status</a>
 {% endblock content %}
