--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,20 +26,27 @@
 <hr class="mt-3">Recent Projects</h3>
 
 <div class="row text-center mt-5">
-  <div class="col-md-4 mb-4 mb-md-3">
-    <div class="w-3 mx-auto">
-      <canvas
-        class="ex-graph"
-        width="200" height="200"
-        data-chart="doughnut"
-        data-dataset="[230, 130]"
-        data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
-        data-labels="['Returning', 'New']">
-      </canvas>
+  
+  {% for project in project_list %}
+  {% if forloop.counter <= 3 %}
+    <div class="col-md-4 mb-4 mb-md-3">
+        <div class="w-3 mx-auto">
+          <canvas
+            class="ex-graph"
+            width="200" height="200"
+            data-chart="doughnut"
+            data-dataset="[230, 130]"
+            data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
+            data-labels="['Returning', 'New']">
+          </canvas>
+        </div>
+        <strong class="text-muted">traffic</strong>
+        <h4>New vs Returning</h4>
     </div>
-    <strong class="text-muted">Traffic</strong>
-    <h4>New vs Returning</h4>
-  </div>
+  
+  {% endif %}
+  {% endfor %}
+  
   <div class="col-md-4 mb-4 mb-md-3">
     <div class="w-3 mx-auto">
       <canvas
@@ -54,6 +61,7 @@
     <strong class="text-muted">Revenue</strong>
     <h4>New vs Recurring</h4>
   </div>
+
   <div class="col-md-4 mb-4 mb-md-3">
     <div class="w-3 mx-auto">
       <canvas
