--- a/templates/projects/list.html
+++ b/templates/projects/list.html
@@ -51,7 +51,7 @@
                 data-chart="doughnut"
                 data-dataset="[230, 130]"
                 data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
-                data-labels="['Returning', 'New']"
+                data-labels="['Open', 'Closed']"
                 >
               </canvas>
             </div>
