--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,9 +35,9 @@
         class="ex-graph"
         width="200" height="200"
         data-chart="doughnut"
-        data-dataset="[230, 130]"
+        data-dataset="[ 3, 2]"
         data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
-        data-labels="['Returning', 'New']">
+        data-labels="['Open', 'Closed']">
       </canvas>
       <strong class="text-muted">{{ project.description }}</strong>
       <a href="{% url 'project_detail' project.id %}"><h4>{{ project.title }}</h4></a>
