--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,7 +26,11 @@
 <hr class="mt-3">Recent Projects</h3>
 
 <div class="row text-center mt-5">
-
+  {% for tickets in ticket_list %}
+  <p>{{ ticket.title }} </p>
+  {% endfor %}
+  <p>{{ ticket.count }}</p>
+  
   {% for project in project_list %}
   {% if forloop.counter <= 3 %}
     <div class="col-md-4 mb-4 mb-md-3">
@@ -35,7 +39,7 @@
         class="ex-graph"
         width="200" height="200"
         data-chart="doughnut"
-        data-dataset="[230, 130]"
+        data-dataset="[10,2, 4]" 
         data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
         data-labels="['Returning', 'New']">
       </canvas>
