--- a/templates/tickets/detail.html
+++ b/templates/tickets/detail.html
@@ -3,6 +3,10 @@
 {% block title %}
     {{ ticket.title }}
 {% endblock title %}
+<!-- <form method="post" action="{% url 'done' object.pk %}">
+    {% csrf_token %}
+    <button type="submit">Done</button>
+</form> -->
 
 {% block content %}
     <h1>{{ ticket.title }}</h1>
@@ -14,5 +18,4 @@
     <h6>Posted by {{ ticket.author }}</h6>
     <a href="{% url 'ticket_edit' ticket.id %}">Edit Post</a> |
     <a href="{% url 'ticket_delete' ticket.id %}">Delete</a>
-    <a href="#">Update Status</a>
 {% endblock content %}
