--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -23,11 +23,14 @@
   </div>
 </div>
 
-<hr class="mt-3">Recent Projects</h3>
+<hr class="mt-3"><h3>Recent Projects</h3>
+{% for ticket in ticket_list %}
+<p>{{ticket.title}}</p>
+{% endfor %}
 
 <div class="row text-center mt-5">
 
-  {% for project in project_list %}
+  {% for project in data_set %}
   {% if forloop.counter <= 3 %}
     <div class="col-md-4 mb-4 mb-md-3">
       <div class="w-3 mx-auto">
@@ -35,7 +38,9 @@
         class="ex-graph"
         width="200" height="200"
         data-chart="doughnut"
-        data-dataset="[ 3, 2]"
+        data-dataset="[ {% for count in project.count %}
+          {{count}},
+          {% endfor %}]"
         data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
         data-labels="['Open', 'Closed']">
       </canvas>
