--- a/templates/tickets/detail.html
+++ b/templates/tickets/detail.html
@@ -16,6 +16,6 @@
     <h3>{{ ticket.dateResolved }}</h3>
     <p>{{ ticket.commentary }}</p>
     <h6>Posted by {{ ticket.author }}</h6>
-    <a href="{% url 'ticket_edit' ticket.id %}">Edit Post</a> |
+    <a href="{% url 'ticket_edit' ticket.id %}">Edit Ticket</a> |
     <a href="{% url 'ticket_delete' ticket.id %}">Delete</a>
 {% endblock content %}
