--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -34,7 +34,7 @@
   {% endfor %}
   <p>{{ ticket.count }}</p>
   
-  {% for project in project_list %}
+  {% for project in data_set %}
   {% if forloop.counter <= 3 %}
     <div class="col-md-4 mb-4 mb-md-3">
       <div class="w-3 mx-auto">
