--- a/templates/projects/list.html
+++ b/templates/projects/list.html
@@ -41,7 +41,37 @@
     <div class="tab-content">
       <div role="tabpanel" class="tab-pane active" id="traffic">
         <div class="row text-center m-t-md">
+          {% for ticket in ticket_list %}
+          <p>{{ticket.title}}</p>
+          {% endfor %}
 
+          <div class="row text-center mt-5">
+            {% for tickets in ticket_list %}
+            <p>{{ ticket.title }} </p>
+            {% endfor %}
+            <p>{{ ticket.count }}</p>
+            
+            {% for project in data_set %}
+              <div class="col-md-4 mb-4 mb-md-3">
+                <div class="w-3 mx-auto">
+                  <canvas
+                  class="ex-graph"
+                  width="200" height="200"
+                  data-chart="doughnut"
+                  data-dataset="[ {% for count in project.count %}
+                    {{count}},
+                    {% endfor %}]"
+                  data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
+                  data-labels="['Not-Started','In-Progress', 'Completed']">
+                </canvas>
+                <strong class="text-muted">{{ project.description }}</strong>
+                <a href="{% url 'project_detail' project.id %}"><h4>{{ project.title }}</h4></a>
+                </div>
+              </div>
+            {% empty %}
+            <p>There are no projects yet. <a href="{% url 'project_new' %}">Make one here.</a></p>
+            {% endfor %}  
+<!-- 
           {% for project in project_list %}
           <div class="col-md-4 mb-5">
             <div class="w-3 mx-auto">
@@ -59,7 +89,7 @@
             <h4>{{project.description}}</h4>
             <p>There are {} tickets that need to be completed</p>
           </div>
-          {% endfor %}
+          {% endfor %} -->
           
           
         </div>
