--- a/templates/ticket-history.html
+++ b/templates/ticket-history.html
@@ -153,7 +153,7 @@
         <td><a href="{% url 'ticket_detail' ticket.id %}">{{ ticket.id }}</a></td>
         <td>{{ ticket.title }}</td>
         <td>{{ ticket.project}}</td>
-        <td>{{ ticket.status }}</td>
+        <td>{{ ticket.StatusLevel }}</td>
         <td>{{ ticket.difficulty }}</td>
       </tr>
       {% endfor %}
