--- a/templates/ticket-history.html
+++ b/templates/ticket-history.html
@@ -135,8 +135,8 @@
 </div>
 
 <div class="table-responsive">
-  <table class="table" data-sort="table">
-    <thead>
+  <table class="table table-inverse" data-sort="table">
+    <thead class="thead-inverse">
       <tr>
         <th><input type="checkbox" class="select-all" id="selectAll"></th>
         <th>Ticket #</th>
