--- a/templates/projects/list.html
+++ b/templates/projects/list.html
@@ -61,7 +61,7 @@
                   data-dataset="[ {% for count in project.count %}
                     {{count}},
                     {% endfor %}]"
-                  data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
+                  data-dataset-options="{ borderColor: '#252830', backgroundColor: ['black' ,'#1ca8dd','#1bc98e' ] }"
                   data-labels="['Not-Started','In-Progress', 'Completed']">
                 </canvas>
                 <strong class="text-muted">{{ project.description }}</strong>
