label fixes, cleanup

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   
     <div class="intro">
       <h1>QlickBooks</h1> 
-        <p>Welcome to QlickBooks, our application is directed towards your stay-home mom to your fortune 500 CEO. What our app does is break down every task that needs to be completed in order to keep all your team members or family members on track. Our services are completely free and we highly encourage you to share our amazing app with your friends or boss that needs a little help organizing tasks!</p> 
+        <p>Welcome to QlickBooks, our application is directed towards breaking down every task that needs to be completed in order to keep all your team members on track. We highly encourage you to share our amazing app with your friends or boss that needs a little help organizing tasks!</p> 
     </div>
     <div class="signin">
       <h1>Welcome!</h1>
