dataset colors and labels

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -45,8 +45,8 @@
         data-dataset="[ {% for count in project.count %}
           {{count}},
           {% endfor %}]"
-        data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
-        data-labels="['Closed','Open','Not-Started']">
+        data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e', 'black'] }"
+        data-labels="['Completed','In-Progress','Not-Started']">
       </canvas>
       <a href="{% url 'project_detail' project.id %}"><h4>{{ project.title }}</h4></a>
       <strong class="text-muted">{{ project.description }}</strong>
