--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,14 +1,15 @@
-{% extends 'icon-nav.html' %}
+{% extends 'base.html' %}
 
 
 {% block content %}
-
-<h1>How to Do things</h1>
-<h5>Frequently Asked Questions</h5>
-<ul>Steps to Create a project</ul>
-<ul>Steps to Create a task</ul>
-<ul>Steps to add people to each task</ul>
-<ul>How to delete a task</ul>
-<ul>How to delete a project</ul>
+<div class="col-md-9 content">
+    <h1>How to Do things</h1>
+    <h5>Frequently Asked Questions</h5>
+    <ul>Steps to Create a project</ul>
+    <ul>Steps to Create a task</ul>
+    <ul>Steps to add people to each task</ul>
+    <ul>How to delete a task</ul>
+    <ul>How to delete a project</ul>
+</div>
 
 {% endblock content %}
