--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -11,5 +11,6 @@
         </div>
     </div>
     <h1>You are now<br>logged out.</h1>
+    <button class="btn btn-primary" href="{% url 'home' %}">Home</button>
 
 {% endblock content %}
