--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -3,10 +3,12 @@
 {% block title %} Sign Up{% endblock title %}
 
 {% block content %}
+<div class="col-md-9 content">
     <h1>Sign Up</h1>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Register" class="btn btn-success">
     </form>
+</div>
 {% endblock content %}
