--- a/templates/base.html
+++ b/templates/base.html
@@ -81,12 +81,12 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="{% url 'logout' %}">Logout</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="{% url 'contact' %}" data-toggle="modal">
                 Contact
               </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link bg-danger " href="{% url 'logout' %}">Logout</a>
             </li>
           {% endif %}
             
