--- a/templates/icon-nav.html
+++ b/templates/icon-nav.html
@@ -58,31 +58,31 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link bg-secondary" href="{% url 'project_list' %}" title="Project List" data-toggle="tooltip" data-placement="right" data-container="body">
+          <a class="nav-link " href="{% url 'project_list' %}" title="Project List" data-toggle="tooltip" data-placement="right" data-container="body">
             <span class="icon icon-list"></span>
             <small class="iconav-nav-label hidden-md-up">Project List</small>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link bg-secondary" href="{% url 'ticket-history' %}" title="Ticket history" data-toggle="tooltip" data-placement="right" data-container="body">
+          <a class="nav-link " href="{% url 'ticket-history' %}" title="Ticket history" data-toggle="tooltip" data-placement="right" data-container="body">
             <span class="icon icon-folder"></span>
             <small class="iconav-nav-label hidden-md-up">History</small>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link bg-success" href="{% url 'project_new' %}" title="New Project" data-toggle="tooltip" data-placement="right" data-container="body">
-            <span class="icon icon-upload"></span>
+        <li class="nav-item bg-success">
+          <a class="nav-link " href="{% url 'project_new' %}" title="New Project" data-toggle="tooltip" data-placement="right" data-container="body">
+            <span class="icon icon-upload "></span>
             <small class="iconav-nav-label hidden-md-up">New Project</small>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link bg-secondary" href="{% url 'about' %}" title="About" data-toggle="tooltip" data-placement="right" data-container="body">
+          <a class="nav-link " href="{% url 'about' %}" title="About" data-toggle="tooltip" data-placement="right" data-container="body">
             <span class="icon icon-text-document"></span>
             <small class="iconav-nav-label hidden-md-up">About</small>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link bg-secondary" href="{% url 'faq' %}" title="Frequently Asked Questions" data-toggle="tooltip" data-placement="right" data-container="body">
+          <a class="nav-link " href="{% url 'faq' %}" title="Frequently Asked Questions" data-toggle="tooltip" data-placement="right" data-container="body">
             <span class="icon icon-chat"></span>
             <small class="iconav-nav-label hidden-md-up">FAQ</small>
           </a>
