--- a/templates/icon-nav.html
+++ b/templates/icon-nav.html
@@ -46,7 +46,7 @@
     <div class="iconav-slider">
       <ul class="nav nav-pills iconav-nav flex-md-column">
         <li class="nav-item">
-          <a class="nav-link bg-info" href="/admin" title="Admin Portal" data-toggle="tooltip" data-placement="right" data-container="body">
+          <a class="nav-link bg-link" href="/admin" title="Admin Portal" data-toggle="tooltip" data-placement="right" data-container="body">
             <span class="icon icon-clipboard"></span>
             <small class="iconav-nav-label hidden-md-up">Admin Portal</small>
           </a>
@@ -59,18 +59,18 @@
         </li>
         <li class="nav-item">
           <a class="nav-link bg-secondary" href="{% url 'project_list' %}" title="Project List" data-toggle="tooltip" data-placement="right" data-container="body">
-            <span class="icon icon-list"></span>
+            <span class="icon icon-globe"></span>
             <small class="iconav-nav-label hidden-md-up">Project List</small>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link bg-secondary" href="{% url 'ticket-history' %}" title="Ticket history" data-toggle="tooltip" data-placement="right" data-container="body">
-            <span class="icon icon-folder"></span>
+            <span class="icon icon-list"></span>
             <small class="iconav-nav-label hidden-md-up">History</small>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link bg-success" href="{% url 'project_new' %}" title="New Project" data-toggle="tooltip" data-placement="right" data-container="body">
+          <a class="nav-link bg-link" href="{% url 'project_new' %}" title="New Project" data-toggle="tooltip" data-placement="right" data-container="body">
             <span class="icon icon-upload"></span>
             <small class="iconav-nav-label hidden-md-up">New Project</small>
           </a>
@@ -94,7 +94,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link bg-danger" href="{% url 'logout' %}" title="Logout" data-toggle="tooltip" data-placement="right" data-container="body">
+          <a class="nav-link bg-link" href="{% url 'logout' %}" title="Logout" data-toggle="tooltip" data-placement="right" data-container="body">
             <span class="icon icon-arrow-left"></span>
             <small class="iconav-nav-label hidden-md-up">Logout</small>
           </a>
