--- a/templates/projects/list.html
+++ b/templates/projects/list.html
@@ -143,7 +143,7 @@
       <div class="col-lg-4 mb-5">
         <div class="list-group mb-3">
           <h6 class="list-group-header">
-            Countries
+            Completion Status
           </h6>
           
             <a class="list-group-item list-group-item-action justify-content-between" href="#">
